tests/baselines/reference/operatorAddNullUndefined.errors.txt
tests/cases/compiler/operatorAddNullUndefined.ts(2,10): error TS2365: Operator '+' cannot be applied to types '空值' and '空值'.
tests/cases/compiler/operatorAddNullUndefined.ts(3,10): error TS2365: Operator '+' cannot be applied to types '空值' and '未定'.
tests/cases/compiler/operatorAddNullUndefined.ts(4,10): error TS2365: Operator '+' cannot be applied to types '未定' and '空值'.
tests/cases/compiler/operatorAddNullUndefined.ts(5,10): error TS2365: Operator '+' cannot be applied to types '未定' and '未定'.
tests/cases/compiler/operatorAddNullUndefined.ts(6,10): error TS2365: Operator '+' cannot be applied to types '1' and '空值'.
tests/cases/compiler/operatorAddNullUndefined.ts(7,10): error TS2365: Operator '+' cannot be applied to types '1' and '未定'.
tests/cases/compiler/operatorAddNullUndefined.ts(8,10): error TS2365: Operator '+' cannot be applied to types '空值' and '1'.
tests/cases/compiler/operatorAddNullUndefined.ts(9,10): error TS2365: Operator '+' cannot be applied to types '未定' and '1'.
tests/cases/compiler/operatorAddNullUndefined.ts(14,11): error TS2365: Operator '+' cannot be applied to types '空值' and 'E'.
tests/cases/compiler/operatorAddNullUndefined.ts(15,11): error TS2365: Operator '+' cannot be applied to types '未定' and 'E'.
tests/cases/compiler/operatorAddNullUndefined.ts(16,11): error TS2365: Operator '+' cannot be applied to types 'E' and '空值'.
tests/cases/compiler/operatorAddNullUndefined.ts(17,11): error TS2365: Operator '+' cannot be applied to types 'E' and '未定'.


==== tests/cases/compiler/operatorAddNullUndefined.ts (12 errors) ====
    enum E { x }
    var x1 = null + null;
             ~~~~~~~~~~~
!!! error TS2365: Operator '+' cannot be applied to types '空值' and '空值'.
    var x2 = null + undefined;
             ~~~~~~~~~~~~~~~~
!!! error TS2365: Operator '+' cannot be applied to types '空值' and '未定'.
    var x3 = undefined + null;
             ~~~~~~~~~~~~~~~~
!!! error TS2365: Operator '+' cannot be applied to types '未定' and '空值'.
    var x4 = undefined + undefined;
             ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2365: Operator '+' cannot be applied to types '未定' and '未定'.
    var x5 = 1 + null;
             ~~~~~~~~
!!! error TS2365: Operator '+' cannot be applied to types '1' and '空值'.
    var x6 = 1 + undefined;
             ~~~~~~~~~~~~~
!!! error TS2365: Operator '+' cannot be applied to types '1' and '未定'.
    var x7 = null + 1;
             ~~~~~~~~
!!! error TS2365: Operator '+' cannot be applied to types '空值' and '1'.
    var x8 = undefined + 1;
             ~~~~~~~~~~~~~
!!! error TS2365: Operator '+' cannot be applied to types '未定' and '1'.
    var x9 = "test" + null;
    var x10 = "test" + undefined;
    var x11 = null + "test";
    var x12 = undefined + "test";
    var x13 = null + E.x
              ~~~~~~~~~~
!!! error TS2365: Operator '+' cannot be applied to types '空值' and 'E'.
    var x14 = undefined + E.x
              ~~~~~~~~~~~~~~~
!!! error TS2365: Operator '+' cannot be applied to types '未定' and 'E'.
    var x15 = E.x + null
              ~~~~~~~~~~
!!! error TS2365: Operator '+' cannot be applied to types 'E' and '空值'.
    var x16 = E.x + undefined
              ~~~~~~~~~~~~~~~
!!! error TS2365: Operator '+' cannot be applied to types 'E' and '未定'.